--- a/src/css/main.css
+++ b/src/css/main.css
@@ -28,8 +28,6 @@
     background-color: rgba(255, 255, 255, 0.15);
     backdrop-filter: blur(10px);
 }
-/* BlogPage */
-
 
 /* blog, testimoni, payment */
 .page-background-2{
@@ -117,6 +115,7 @@
 .footer-bg {
     background-color: #161616;
     color:#fcfcfc;
+    font-family: 'inter', sans-serif;
 }
 
 .center {
