--- a/src/css/main.css
+++ b/src/css/main.css
@@ -154,3 +154,207 @@ a:active {
     height: 30px;
     margin: 5px 10px 5px 0px;
 }
+
+/* login */
+
+.wrapper{
+    font-family: 'poppins', sans-serif;
+    background-color: #161616;
+    padding: 0 20px 0 20px;
+}
+
+.wrapper .main{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+}
+
+.wrapper .main .row{
+    width: 1000px;
+    height: 650px;
+    border-radius: 20px;
+    background: #161616;
+    box-shadow: 5px 5px 10px 1px rgba(0,0,0,0);
+}
+
+.wrapper .main .row .side-image{
+    background-image: url("../assets/imageloginsign.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    position: relative;
+    border-radius: 20px 0 0 20px;
+}
+
+.wrapper .main .row .side-image img{
+    width: 35px;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+}
+
+.wrapper .main .row .right{
+    background-image: url("../assets/imageloginsign2.png");
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    border-radius: 0 20px 20px 0;
+}
+
+.wrapper .main .row .right .input-box{
+    width: 380px;
+    box-sizing: border-box;
+    border-radius: 50px;
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    background: linear-gradient(128deg, rgba(0, 119, 192, 0.12) -81.68%, rgba(255, 255, 255, 0.00) 100%);
+    backdrop-filter: blur(6px);
+}
+
+.wrapper .main .row .right .input-box header{
+    font-size: 22px;
+    margin-top: 20px;
+    font-weight: 400;
+    text-align: center;
+    margin-bottom: 45px;
+}
+
+.wrapper .main .row .right .input-box .input-field{
+    font-size: 12px;
+    margin: 20px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    padding: 0 10px 0 10px;
+
+}
+
+.wrapper .main .row .right .input-box .input-field .input{
+    height: 45px;
+    width: 100%;
+    background: transparent;
+    border: 1px solid rgba(255, 255, 255, 0.25);
+    border-radius: 15px;
+    padding: 20px;
+    backdrop-filter: blur(6px);
+}
+
+.wrapper .main .row .right .input-box .input-field-submit{
+    margin-top: 30px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    padding: 0 10px 0 10px;
+    align-items: center;
+    margin-bottom: 20px;
+}
+
+.wrapper .main .row .right .input-box .input-field-submit .submit{
+    width: 90px;
+    height: 40px;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.28) 0%, rgba(0, 0, 0, 0.00) 100%);
+    border: 1px solid #fff;
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+}
+
+.wrapper .main .row .right .nav-login{
+    font-weight: bold;
+    font-size: 12px;
+    display: flex;
+    justify-content: space-between;
+    position: absolute;
+    top: 20px;
+    left: 30px;
+    right: 30px;
+}
+
+/* sign up */
+
+
+
+.wrapper .main .row .right .input-box-sign header{
+    font-size: 22px;
+    font-weight: 400;
+    font-size: 30px;
+    margin-bottom: 30px;
+}
+
+.wrapper .main .row .right .input-box-sign .name{
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    align-items: center;
+}
+
+.wrapper .main .row .right .input-box-sign .name-input{
+    font-size: 12px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.wrapper .main .row .right .input-box-sign .name-input .input-sign{
+    height: 45px;
+    width: 100%;
+    background: transparent;
+    border: 1px solid #89C7C3;
+    border-radius: 15px;
+    padding: 20px;
+    backdrop-filter: blur(6px);
+}
+
+.wrapper .main .row .right .input-box-sign .input-field-sign{
+    margin-top: 20px;
+    font-size: 10px;
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.wrapper .main .row .right .input-box-sign .input-field-sign .input-sign{
+    height: 45px;
+    background: transparent;
+    border: 1px solid #89C7C3;
+    border-radius: 15px;
+    backdrop-filter: blur(6px);
+    padding: 20px;
+}
+
+.wrapper .main .row .right .input-box-sign .input-field-sign-submit{
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+    align-items: center;
+    margin-top: 40px;
+    margin-bottom: 30px;
+
+}
+
+.wrapper .main .row .right .input-box-sign .input-field-sign-submit .submit{
+    height: 40px;
+    background: linear-gradient(180deg, rgba(0, 0, 0, 0.28) 0%, rgba(0, 0, 0, 0.00) 100%);
+    border: 1px solid #89C7C3;
+    border-radius: 10px;
+    font-size: 10px;
+}
+
+.wrapper .main .row .right .input-box-sign .input-field-sign-submit .submit a{
+    margin: 20px;
+}
+
+.wrapper .main .row .right .input-box-sign .input-field-sign-submit .submit img{
+    width: 20px;
+    margin-right: 10px;
+}
+
+.wrapper .main .row .right .input-box-sign p {
+    font-size: 12px;
+}
