--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,3 +1,4 @@
+
 .nav-style{
     font-family: 'inter', sans-serif;
     background-color: #161616;
@@ -357,4 +358,284 @@ a:active {
 
 .wrapper .main .row .right .input-box-sign p {
     font-size: 12px;
+}
+
+/* Home */
+.homestyle{
+    background-color: #171717;
+    min-height: 100vh;
+}
+/* hero */
+#hero{
+    background: url(../assets/homeimg.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    height: 930px;
+    margin: 0px 10px;
+}
+
+.hero-tagline h3{
+    margin-top: 150px;
+    color: #006032;
+    font-family: 'poppins', sans-serif;
+    font-size: 26px;
+    font-weight: 700;
+}
+
+.hero-tagline h1{
+    margin-top: 30px;
+    width: 355px;
+    color: #022831;
+    font-family: 'Volkhov';
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 700;
+}
+
+.hero-tagline p{
+    margin-top: 30px;
+    width: 300px;
+    color: #F5F5F5;
+    font-family: 'Poppins';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+}
+
+.button-lg-primary{
+    margin-top: 30px;
+    border: none;
+    color: #fff;
+    text-align: center;
+    font-family: 'Inter';
+    font-size: 23.942px;
+    font-style: normal;
+    font-weight: 700;
+    width: 226px;
+    height: 80px;
+    border-radius: 13.301px;
+    background: #17281F;
+}
+
+/* courses home */
+.pc{
+    font-family: 'Volkhov', sans-serif;
+    color: #EDDC41;
+    font-size: 60px;
+    font-style: normal;
+    font-weight: 700
+}
+
+.pc2{
+    color: #fff;
+    font-family: 'Poppins';
+    font-size: 26.602px;
+    font-style: normal;
+    font-weight: 700;
+}
+
+.mc-home{
+    text-decoration: none;
+    color: #F5F5F5;
+    font-size: 17px;
+    font-style: normal;
+    font-weight: 600;
+}
+
+/* avatarlogo */
+.bar{
+    display: flex;
+    flex-wrap: wrap;
+    height: 200px;
+    background: #252525;
+    position: relative;
+}
+
+/* community & event */
+.img-card{
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
+.col .card{
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25), 0px 4px 4px 0px rgba(0, 0, 0, 0.25), 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
+
+.card-text a{
+    text-decoration: none;
+    color: #006032;
+    font-family: 'poppins';
+    font-size: 16px;
+}
+
+.card-body p{
+    color: #737373;
+    text-align: justify;
+    font-family: 'poppins';
+    font-size: 15px;
+    font-style: normal;
+
+}
+
+/* about */
+#about{
+    background: url(../assets/about.png);
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+}   
+
+.about-tagline{
+    text-align: justify;
+    width: 639px;
+    height: 680px;
+    border: 1px solid #737373;
+    background-color: rgba(15, 15, 15, 0.592);
+    backdrop-filter: blur(6px);
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+}
+
+
+.about-tagline h1{
+    margin-top: 30px;
+    color: #EDDC41;
+    font-family: 'Volkhov', sans-serif;
+    font-size: 50px;
+    font-style: normal;
+    font-weight: 700;
+}
+
+.about-tagline p{
+    margin-top: 30px;
+    color: #F5F5F5;
+    font-family: 'poppins', sans-serif;
+    font-size: 22px;
+    font-weight: 500;
+}
+
+.about-element p{
+    padding: 20px 0px;
+    margin: 200px 100px ;
+    text-align: center;
+    color: #F5F5F5;
+    background-color: #013F21;
+    font-family: 'poppins', sans-serif;
+    font-size: 30px;
+}
+
+/* newsletter */
+.subs{
+    position: relative;
+}
+
+.subs img{
+    margin-top: 100px;
+}
+
+.subs-inputan{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.subs h3{
+    margin-top: 100px;
+    color: #17281F;
+    font-family: 'Volkhov';
+    font-size: 32px;
+    font-weight: 700;
+}
+
+.input-subs{
+    padding: 20px;
+    border: 0;
+    width: 400px;
+    height: 80px;
+    border-radius: 13.301px;
+}
+
+.button-subs{
+    margin: 20px;
+    border: 0;
+    color: #F5F5F5;
+    text-align: center;
+    font-family: 'poppins';
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 600;
+    width: 200px;
+    height: 80px;
+    border-radius: 13.301px;
+    background: #17281F;
+}
+
+/* bg-page */
+.p-course {
+    background-image: url(../assets/background2.png);
+    min-height: 100vh;
+}
+
+.community-home{
+    background-image: url(../assets/background2.png);
+    min-height: 100vh;
+}
+
+.subs-home{
+    background-image: url(../assets/background2.png);
+    min-height: 100vh;
+}
+
+/* page community */
+
+.page-community{
+    background-image: url(../assets/background2.png);
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 100vh;
+    font-family: 'poppins', sans-serif;
+}
+
+.page-community h1{
+    color: #F5F5F5;
+    font-weight: 600;
+}
+
+.page-community h5{
+    color: #BDBDBD;
+    font-size: 300;
+    margin-bottom: 50px;
+}
+
+.page-community p{
+    color: #F5F5F5;
+    padding: 10px;
+    border: 1px solid #737373;
+    background-color: rgba(15, 15, 15, 0.592);
+    backdrop-filter: blur(6px);
+    border-radius: 15px;
+}
+
+/* payment */
+.payment-bg{
+    background-image: url(../assets/background2.png);
+    max-height: 800px;
+    position: relative;
+}
+
+.payment img{
+    width: 150px;
 }
