--- a/src/css/main.css
+++ b/src/css/main.css
@@ -435,6 +435,19 @@ a:active {
     font-weight: 700;
 }
 
+.btn-course-home{
+    width: 230px;
+    text-align: start;
+    border: none;
+    font-family: 'poppins', sans-serif;
+    background-color: #DCDCDC;
+}
+
+.btn-course-home span{
+    font-size: 15px;
+    font-weight: 600;
+}
+
 
 /* avatarlogo */
 .bar{
@@ -639,3 +652,22 @@ a:active {
     width: 150px;
 }
 
+/* page course */
+
+
+.course-page h1{
+    margin-top: 50px;
+        font-family: 'Volkhov', sans-serif;
+        color: #EDDC41;
+        font-size: 60px;
+        font-style: normal;
+        font-weight: 700
+}
+
+.course-page p{
+    color: #fff;
+    font-family: 'Poppins';
+    font-size: 26.602px;
+    font-style: normal;
+    font-weight: 700;
+}
